update vox stuff and copy and links

--- a/source/artallnight.html.erb
+++ b/source/artallnight.html.erb
@@ -1,5 +1,5 @@
-<a href="megabus.html" class="arrows arrows-left">&lsaquo;</a>
-<a href="little.html" class="arrows arrows-right">&rsaquo;</a>
+<a href="ysc.html" class="arrows arrows-left">&lsaquo;</a>
+<a href="ukrave.html" class="arrows arrows-right">&rsaquo;</a>
 <div class="project section">
 <h1>Art All Night</h1>
 <div class="project-image section">
