--- a/source/little.html.erb
+++ b/source/little.html.erb
@@ -1,5 +1,5 @@
-<a href="artallnight.html" class="arrows arrows-left">&lsaquo;</a>
-<a href="ukrave.html" class="arrows arrows-right">&rsaquo;</a>
+<a href="ukrave.html" class="arrows arrows-left">&lsaquo;</a>
+<a href="vox.html" class="arrows arrows-right">&rsaquo;</a>
 <div class="project section">
 <h1>Little House Book Covers</h1>
 <div class="project-image section">
