--- a/source/offbeat.html.erb
+++ b/source/offbeat.html.erb
@@ -1,5 +1,5 @@
-<a href="vox.html" class="arrows arrows-left">&lsaquo;</a>
-<a href="ysc.html" class="arrows arrows-right">&rsaquo;</a>
+<a href="megabus.html" class="arrows arrows-left">&lsaquo;</a>
+<a href="muse.html" class="arrows arrows-right">&rsaquo;</a>
 <div class="project section">
 <h1>OffbeatDC</h1>
 <div class="project-image section">
@@ -17,7 +17,7 @@
 
   <p>OffbeatDC, sponsored by Megabus, is an iPhone application to guide tourists when traveling in unfamiliar cities. The app aims to help travelers discover local gems by recommending places that are strictly curated by locals. The app lets the user pick how much time they have to kill, how far they want to go, and what kind of place they want to enjoy. It then directs them to the place and allows them to review it based on their experience.</p>
 </div>
-<h3>Not just another travel app</h3>
+<h3>Not Just Another Travel App</h3>
 
 <div class="project-image section">
     <img src="img/offbeat-flowchart.png">
