--- a/source/vox.html.erb
+++ b/source/vox.html.erb
@@ -1,43 +1,74 @@
-<a href="muse.html" class="arrows arrows-left">&lsaquo;</a>
-<a href="offbeat.html" class="arrows arrows-right">&rsaquo;</a>
+<a href="little.html" class="arrows arrows-left">&lsaquo;</a>
+<a href="megabus.html" class="arrows arrows-right">&rsaquo;</a>
 <div class="project section">
-<h1>Vox Media Projects</h1>
+  <h1>Vox Media Website &amp; Media Kit</h1>
 <div class="project-image section">
     <img src="img/voxmedia.jpg">
 </div>
 <div class="project-description section">
-  <h1>VoxMedia.com</h1>
   <strong class="role-title">Role:</strong> 
   <ul class="role">
     <li>Front-end Developer</li>
-    <li>Tate Tozer, John Fuller, Joe Grossberg: Development</li>
+    <li>Tate Tozer, John Fuller: Front-end Developers</li> 
+    <li>Joe Grossberg: Full-stack Developer</li>
     <li>Uy Tieu, Ted Irvine, Ramla Mahmood: Design</li>
   </ul>  
-  <p>Website and Media Kit built for Vox Media.</p>
-  <p>During this project, I also created an online <a href="http://voxmedia.com/styleguide/" target="_blank">styleguide</a> and responsive <a href="http://voxmedia.com/moodboards/" target="_blank">moodboards</a> that were written about on the <a href="http://product.voxmedia.com/post/57083313268/staticity-no-more" target="_blank">Vox Product Blog</a>.</p> 
+  <p>Vox Media is one of the fastest-growing online publishers, focused on lifestyle brands that connect with passionate audiences. </p>
+  <p>Vox Media creates things for the internet…but didn't represent itself anywhere. Because most revenue is brought in by ads, we needed a place to centralize advertising information so that companies could better approach us. We needed to focus on showing our brands, their audiences, different ad units, all while maintaining a unified feel.</p>
+
   <a class="live" href="http://www.voxmedia.com" target="_blank">View it live!</a>
 </div>
+<h3>Beginning in the Browser</h3>
 <div class="project-image section">
-    <img src="img/onboarding.jpg">
+  <img src="img/vox-media-moodboard.jpg">
 </div>
 <div class="project-description section">
-  <h1>Onboarding</h1>
-    <strong class="role-title">Role:</strong> 
+  <p>Through some research, we discovered the idea of responsive moodboards. These gave viewers the chance to see what our site would feel like on every device. Ted Irvine and Uy Tieu wrote a little more about our process <a href="http://product.voxmedia.com/post/57083313268/staticity-no-more" target="_blank">here</a>.
+</p>
+  <a class="live" href="http://www.voxmedia.com/moodboards" target="_blank">View it live!</a>
 
-  <ul class="role">
-    <li>Front-end Developer</li>
-    <li>Ramla Mahmood, Kelsey Scherer, Katharine Molloy, Ngan Hoang: Designers</li>
-  </ul>
-  <p>During the semi-annual Vox Media Hackathon, Vax, I to make the company's onboarding proces a little better. This is an internal three page website that outlines the process for new employees.</p>
+</div>
+
+<div class="project-image section">
+  <img src="img/vox-media-wireframe.jpg">
+</div>
+<div class="project-description section">
+  <p>We had a pretty short time line for this project and meetings with stakeholders often. We wanted to be able to show the layout as it would be viewed in the end — in a browser. I quickly prototyped wireframes in browser using Bootstrap so that I could make changes on the fly.
+</p>
+</div>
+<h3>The Styleguide</h3>
+<div class="project-image section">
+  <img src="img/vox-media-styleguide.jpg">
+</div>
+<div class="project-description section">
+  <p>Because of the scope of this project, there were a lot of designs that needed to be centralized, organized, and kept consistent. In order to do this, whenever I got a design mock with a new asset, I built it out here. This helped us keep consistent and also helped any new developer or designer jumping on the project to get a feel for what we were building.</p>
+    <a class="live" href="http://www.voxmedia.com/styleguide" target="_blank">View it live!</a>
+
+</div>
+
+<h3>The Outcome</h3>
+
+<div class="project-image section">
+  <img src="img/vox-media-screen2.jpg">
+</div>
+
+<div class="project-image section">
+  <img src="img/vox-media-screen1.jpg">
+</div>
+
+<div class="project-image section">
+  <img src="img/vox-media-screen3.jpg">
+</div>
+
+<h3>The Media Kit</h3>
+<div class="project-image section">
+  <img src="img/vox-media-kit1.jpg">
 </div>
 <div class="project-image section">
-    <img src="img/rivera.gif">
-  </div>
-    <div class="project-description section">
-  <h1>Mariano Rivera Retrospective</h1>
-  <p class="role"><strong>Role:</strong> Front-End Developer</p>
-  <p>Alongside designer <a href="http://www.ramla.co" target="_blank">Ramla Mahmood</a> I developed a feature for Mariano Rivera for SB Nation. 
-  <a class="live" href="http://www.sbnation.com/mlb/2013/9/25/4762282/mariano-rivera-retirement-career-retrospective-new-york-yankees" target="_blank">View it live!</a>
+  <img src="img/vox-media-kit.gif">
+</div>
+<div class="project-description section">
+  <p>To show our advertising units in the best way, we put up screen shots that the user can roll their mouse over to see the names and location of each different unit.</p>
 </div>
 
 </div>
