--- a/source/megabus.html.erb
+++ b/source/megabus.html.erb
@@ -1,5 +1,5 @@
-<a href="ysc.html" class="arrows arrows-left">&lsaquo;</a>
-<a href="artallnight.html" class="arrows arrows-right">&rsaquo;</a>
+<a href="vox.html" class="arrows arrows-left">&lsaquo;</a>
+<a href="offbeat.html" class="arrows arrows-right">&rsaquo;</a>
 <div class="project section">
 <h1>Megabus Rebranding</h1>
 <div class="project-image section">
