--- a/source/muse.html.erb
+++ b/source/muse.html.erb
@@ -1,5 +1,5 @@
-<a href="ukrave.html" class="arrows arrows-left">&lsaquo;</a>
-<a href="vox.html" class="arrows arrows-right">&rsaquo;</a>
+<a href="offbeat.html" class="arrows arrows-left">&lsaquo;</a>
+<a href="ysc.html" class="arrows arrows-right">&rsaquo;</a>
 <div class="project section">
 <h1>Muse - the district is your canvas</h1>
 <div class="project-image section">
