--- a/source/ukrave.html.erb
+++ b/source/ukrave.html.erb
@@ -1,5 +1,5 @@
-<a href="little.html" class="arrows arrows-left">&lsaquo;</a>
-<a href="muse.html" class="arrows arrows-right">&rsaquo;</a>
+<a href="artallnight.html" class="arrows arrows-left">&lsaquo;</a>
+<a href="little.html" class="arrows arrows-right">&rsaquo;</a>
 <div class="project section">
 <h1>u.krave design Website</h1>
 <div class="project-image section">
