megabus update and muse thumb

--- a/source/megabus.html.erb
+++ b/source/megabus.html.erb
@@ -27,6 +27,7 @@
 
   <p>I began with the logo. Played with the ideas of connectivity, maps, travel, and obvious bus cliches.</p>
 </div>
+<h3>Living Styleguide</h3>
 <div class="project-image section">
 <img src="img/megabus-brandguide.jpg">
 </div>
