--- a/source/partials/_contact.html.erb
+++ b/source/partials/_contact.html.erb
@@ -13,7 +13,7 @@
                     <p>
                         <label for="email" class="mail-alt">Email</label>
                         <br>
-                        <input type="email" name="email" required="" id="email" placeholder="Email"></p>
+                        <input type="email" name="email" required="" id="email" placeholder="Email address so I can reply pls"></p>
                 </div>
                 <div>
                     <p>
