less dribbles and flickrs. bigger portfolio icons, new layout and icon for offbeat

--- a/source/offbeat.html.erb
+++ b/source/offbeat.html.erb
@@ -2,8 +2,8 @@
 <a href="muse.html" class="arrows arrows-right">&rsaquo;</a>
 <div class="project section">
 <h1>OffbeatDC</h1>
-<div class="project-image section">
-  <img src="img/offbeat-top-image.jpg">
+<div class="project-image section video-wrap">
+  <iframe src="//player.vimeo.com/video/81442328?title=0&amp;byline=0&amp;portrait=0&amp;color=22B573" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 </div>
 <div class="project-description section">
  <strong class="role-title">Role:</strong> 
@@ -15,7 +15,7 @@
     <p><em>Solution:</em> Create an app that allows locals to suggest their favorite places to visit that sets it apart from other travel applications.</p>
   </div>
 
-  <p>OffbeatDC, sponsored by Megabus, is an iPhone application to guide tourists when traveling in unfamiliar cities. The app aims to help travelers discover local gems by recommending places that are strictly curated by locals. The app lets the user pick how much time they have to kill, how far they want to go, and what kind of place they want to enjoy. It then directs them to the place and allows them to review it based on their experience.</p>
+  <p>DC is full of local gems, but how many of them do you know? OffbeatDC is an iPhone application to guide tourists traveling in Washington, DC. The app helps travelers discover attractions “off the beaten path" by recommending places that are curated by residents based on how far the user wants to travel and how much time they have.</p>
 </div>
 <h3>Not Just Another Travel App</h3>
 
@@ -23,12 +23,8 @@
     <img src="img/offbeat-flowchart.png">
 </div>
 <div class="project description section">
-  <p>I wanted to focus on finding places to visit quickly. After researching, it was clear that users generally have a very specific amount of time they have and specific interests so the app should be based off of these key things.</p>
+  <p>Users often only have a certain amount of time free for running around the city. The app uses their time constraint as a major factor to determine the best places for them to go along with DC specific categories to get them somewhere quickly.</p>
   </div>
-
-<div class="project-image section">
-    <img src="img/offbeat-wire.png">
-</div>
 
 <div class="project-image section">
     <img src="img/offbeat-screens-1.jpg">
@@ -38,9 +34,7 @@
     <img src="img/offbeat-screens-2.jpg">
 </div>
 
-<div class="project-image section">
-  <iframe src="//player.vimeo.com/video/81442328?title=0&amp;byline=0&amp;portrait=0&amp;color=22B573" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-</div>
+
 </div>
 
 <%= partial 'partials/footer' %>
