--- a/source/partials/_thumbs.html.erb
+++ b/source/partials/_thumbs.html.erb
@@ -1,6 +1,6 @@
 <div class="gallery section">
 <h1>Portfolio</h1>
-<ul class ="icon-album" id="icons">
+<ul class="portfolio">
 
 <li>
     <a href="vox.html">
