project pages get project layout

--- a/source/chclt.html.erb
+++ b/source/chclt.html.erb
@@ -1,3 +1,7 @@
+---
+layout: project
+---
+
 <a href="scholarsheep.html" class="arrows arrows-left">&lsaquo;</a>
 <a href="designshow.html" class="arrows arrows-right">&rsaquo;</a>
 <div class="project section">
