--- a/source/muse.html.erb
+++ b/source/muse.html.erb
@@ -1,3 +1,7 @@
+---
+layout: project
+---
+
 <a href="offbeat.html" class="arrows arrows-left">&lsaquo;</a>
 <a href="ysc.html" class="arrows arrows-right">&rsaquo;</a>
 <div class="project section">
@@ -97,6 +101,4 @@
 </div>
 
 
-
-<%= partial 'partials/pagination' %>
 <%= partial 'partials/footer' %>
