--- a/source/syke.html.erb
+++ b/source/syke.html.erb
@@ -1,3 +1,7 @@
+---
+layout: project
+---
+
 <a href="papertowns.html" class="arrows arrows-left">&lsaquo;</a>
 <a href="little.html" class="arrows arrows-right">&rsaquo;</a>
 <div class="project section">
