--- a/source/vox.html.erb
+++ b/source/vox.html.erb
@@ -1,9 +1,12 @@
+---
+layout: project
+---
 <a href="little.html" class="arrows arrows-left">&lsaquo;</a>
 <a href="megabus.html" class="arrows arrows-right">&rsaquo;</a>
 <div class="project section">
   <h1>Vox Media Website &amp; Media Kit</h1>
 <div class="project-image section">
-    <img src="img/voxmedia.jpg">
+    <img src="<%= image_path("voxmedia.jpg") %>">
 </div>
 <div class="project-description section">
   <strong class="role-title">Role:</strong> 
