--- a/source/artallnight.html.erb
+++ b/source/artallnight.html.erb
@@ -1,3 +1,6 @@
+---
+layout: project
+---
 <a href="ysc.html" class="arrows arrows-left">&lsaquo;</a>
 <a href="ukrave.html" class="arrows arrows-right">&rsaquo;</a>
 <div class="project section">
