--- a/source/little.html.erb
+++ b/source/little.html.erb
@@ -1,3 +1,7 @@
+---
+layout: project
+---
+
 <a href="ukrave.html" class="arrows arrows-left">&lsaquo;</a>
 <a href="vox.html" class="arrows arrows-right">&rsaquo;</a>
 <div class="project section">
