--- a/source/muse-old.html.erb
+++ b/source/muse-old.html.erb
@@ -1,3 +1,8 @@
+
+---
+layout: project
+---
+
 <a href="ukrave.html" class="arrows arrows-left">&lsaquo;</a>
 <a href="vox.html" class="arrows arrows-right">&rsaquo;</a>
 <div class="project section">
