--- a/source/offbeat.html.erb
+++ b/source/offbeat.html.erb
@@ -1,3 +1,7 @@
+---
+layout: project
+---
+
 <a href="megabus.html" class="arrows arrows-left">&lsaquo;</a>
 <a href="muse.html" class="arrows arrows-right">&rsaquo;</a>
 <div class="project section">
