--- a/source/virginiawoolf.html.erb
+++ b/source/virginiawoolf.html.erb
@@ -1,3 +1,6 @@
+---
+layout: project
+---
 <a href="muse.html" class="arrows arrows-left">&lsaquo;</a>
 <a href="megabus.html" class="arrows arrows-right">&rsaquo;</a>
 <div class="project section">
