update ysc thumb, fix layout, delte useless shit

--- a/source/partials/_thumbs.html.erb
+++ b/source/partials/_thumbs.html.erb
@@ -24,7 +24,7 @@
 </li>
 <li>
     <a href="ysc.html">
-        <img src="img/ysc-thumb.png" alt="" class="thumbs"></a>
+        <img src="img/ysc-thumb.jpg" alt="" class="thumbs"></a>
     </a>
 </li>
 
