--- a/source/stylesheets/styles.scss
+++ b/source/stylesheets/styles.scss
@@ -439,8 +439,8 @@ textarea {
 .arrows {
     color: #fff;
     display: inline-block;
-    background: rgba(0,0,0,.8);
-    padding: 10px;
+    background: rgba(0,0,0,.4);
+    padding: 2px 10px 10px 10px;
     font-size: 40px;
     line-height: 55px;
     position: fixed;
@@ -455,7 +455,7 @@ textarea {
         left: 0;
     }
     &:hover {
-        background: rgba(0,0,0,1);
+        background: rgba(0,0,0,.6);
         transition: background .5s;
         -webkit-transition: background .5s;
         -moz-transition: background .5s;
