--- a/source/polygon.html.erb
+++ b/source/polygon.html.erb
@@ -17,7 +17,7 @@ layout: project
     <li>Jake Lear: Project Manager</li>
     <li>Jon Douglass: Q/A &amp; Support</li>
   </ul>
-<p>As a front-end developer for Vox Media, I spend a lot of time helping design and build out features.</p>
+<p>As a front-end developer for Vox Media, I spend a lot of time helping design and build out long form feature stories.</p>
 </div>
 <h3>The rise of the jump</h3>
 <div class="project-image section">
@@ -32,7 +32,13 @@ layout: project
 </div>
 <h3>Polygon's PC Buying Guide</h3>
 <div class="project-image section">
+    <img src="<%= image_path("polygon-pc1.png") %>">
+</div>
+<div class="project-image section">
     <img src="<%= image_path("pcbg-mobile.jpg") %>">
+</div>
+<div class="section project-description">
+    <p>An in-depth guide to building a custom gaming PC.</p>
 </div>
 <a class="live" href="http://www.polygon.com/a/pc-buying-guide" target="_blank">View live feature!</a>
 
