--- a/source/ysc.html.erb
+++ b/source/ysc.html.erb
@@ -13,7 +13,7 @@ layout: project
   <ul class="role">
     <li>Branding, design</li>
   </ul>
-<p>A brand refresh for the Yoga Service Council. For this rebrand, I wanted to reflect the calm nature of yoga with a relaxing, curved logo. The bright orange contrasts the mark in that it shows the liveliness of the company and grabs attention.</p>
+<p>A brand refresh for the Yoga Service Council.</p>
 </div>
 <div class="project-image section">
     <img src="img/ysc-logo.svg">
