lol not in school anymore

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -46,7 +46,7 @@
           <a href="http://dribbble.com/allypalanzi" target="_blank">designer</a>
           and
           <a href="https://github.com/allypalanzi" target="_blank">front-end developer</a>
-          from Washington, DC. Currently a senior at American University &amp; a front-end developer for
+          from Washington, DC. Currently a front-end developer for
           <a href="http://voxmedia.com" target="_blank">Vox Media</a>.
         </h2>
       </div>
