update bio not in school

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -47,7 +47,7 @@
           and
           <a href="https://github.com/allypalanzi" target="_blank">front-end developer</a>
           from Washington, DC. Currently a front-end developer for
-          <a href="http://voxmedia.com" target="_blank">Vox Media</a>.
+          <a href="http://voxmedia.com" target="_blank">Vox Media</a> and a co-host of the <a href="http://sassydc.github.io" target="_blank">DC Sass Meetup</a>.
         </h2>
       </div>
       <%= yield %>
