--- a/source/resume.html.erb
+++ b/source/resume.html.erb
@@ -9,15 +9,16 @@ layout: project
     <h2>Front-end Engineer, Vox Media</h2>
     <h3>May 2014 — Current</h3>
     <ul>
-      <li>Develop cool things with cool people</li>
+      <li>Front-end developer on Polygon</li>
+      <li>Front-end developer on Vox</li>
     </ul>
   </div>
   <div class="resume-description">
     <h2>Front-end Design Intern, Vox Media</h2>
     <h3>May 2012 — May 2014</h3>
     <ul>
-      <li>Features Designer/Developer</li>
-      <li>Front End Dev on VoxMedia.com</li>
+      <li>Polygon features designer/developer</li>
+      <li>Front-end developer on VoxMedia.com</li>
     </ul>
   </div>
       <div class="resume-description">
@@ -28,12 +29,12 @@ layout: project
       <li>Freelance</li>
     </ul>
   </div>
-     
+
   <div class="resume-description">
     <h2>TA for Intro to Web Design</h2>
     <h3>August 2011 — December 2011</h3>
     <ul>
-      <li>Aided professor with teaching basic website design and 
+      <li>Aided professor with teaching basic website design and
  coding with HTML, CSS, and JavaScript</li>
       <li> Helped students debug code and overcome various
  coding obstacles</li>
@@ -48,26 +49,59 @@ layout: project
     <p>Minor in Computer Science</p>
 
   </section>
+  <section class="resume-skills">
+    <h1>Skills</h1>
+    <div class="resume-description">
+
+    <ul class="left">
+        <h3>Proficient in</h3>
+        <li>Adobe Creative Suite</li>
+        <li>Sass/CSS</li>
+        <li>HTML5</li>
+        <li>JavaScript</li>
+        <li>Git</li>
+    </ul>
+    <ul class="right">
+      <h3>Knowledge of</h3>
+      <li>Python</li>
+      <li>Ruby on Rails</li>
+      <li>ERB Templating</li>
+    </ul>
+  </section>
 </div>
 
 
 <div class="right resume-page">
   <section class="resume-involvement">
     <h1>Involvement</h1>
-        <div class="resume-description">
-    <h2>Yale Hack</h2>
-    <h3>2013</h3>
-    <ul>
-      <li>Hackathon at Yale University</li>
-      <li>Created a Chrome extension with other American U students</li>
-    </ul>
+    <div class="resume-description">
+      <h2>DC Sass Meetup</h2>
+      <h3>2014 — current</h3>
+      <ul>
+        <li>Plan events related to front-end technology for the DC community</li>
+      </ul>
+    </div>
+    <div class="resume-description">
+      <h2>Girl Develop It Instructor &amp; TA</h2>
+      <h3>2014 — current</h3>
+      <ul>
+        <li>Instruct/TA various front-end related classes for women wanting to code</li>
+      </ul>
   </div>
-      
+    <div class="resume-description">
+      <h2>Yale Hack</h2>
+      <h3>2013</h3>
+      <ul>
+        <li>Hackathon at Yale University</li>
+        <li>Created a Chrome extension with other American U students</li>
+      </ul>
+  </div>
+
     <div class="resume-description">
     <h2>World Bank Domestic Violence Hackathon</h2>
     <h3>2013</h3>
     <ul>
-      <li>Designed/developed a web application for 
+      <li>Designed/developed a web application for
  Coaching Boys Into Men</li>
     </ul>
   </div>
@@ -75,7 +109,7 @@ layout: project
 
       <div class="resume-description">
     <h2>AU Design Club</h2>
-    <h3>2011 — Present</h3>
+    <h3>2011 — 2014</h3>
     <ul>
       <li>Vice President 2013 — 2014</li>
       <li>Plan annual design show</li>
@@ -84,7 +118,7 @@ layout: project
 
         <div class="resume-description">
     <h2>AU ACM </h2>
-    <h3>2011 — Present</h3>
+    <h3>2011 — 2014</h3>
     <ul>
 <li>Association of Computing Machinery</li>
 <li>PR Chair 2012 — 2013</li>
@@ -102,28 +136,6 @@ layout: project
 
   </section>
 
-    <section class="resume-skills">
-    <h1>Skills</h1>
-    <div class="resume-description">
 
-    <ul class="left">
-            <h3>Proficient in</h3>
-
-      <li>Adobe Creative Suite</li>
-      <li>Sass/CSS</li>
-      <li>HTML5</li>
-      <li>jQuery</li>
-      <li>Jekyll</li>
-      <li>Git</li>
-
-    </ul>
-    <ul class="right">
-      <h3>Knowledge of</h3>
-      <li>JavaScript</li>
-      <li>Python</li>
-      <li>Django</li>
-
-    </ul>
-  </section>
 </div>
 <div class="clearfix"></div>
