--- a/source/layouts/project.erb
+++ b/source/layouts/project.erb
@@ -18,44 +18,24 @@
 
   <!-- Favicons
   ================================================== -->
-  <link rel="icon" 
-      type="image/png" 
+  <link rel="icon"
+      type="image/png"
       href="img/fav.png">
 
   <title>Ally Palanzi's Portfolio</title>
 
   <link href="stylesheets/normalize.css" media="screen" rel="stylesheet" type="text/css" />
-  <%= stylesheet_link_tag "styles" %>
+  <link href="stylesheets/styles.css" media="screen" rel="stylesheet" type="text/css" />
 </head>
 
 <body class="<%= page_classes %>
   ">
-  <div class="navcont"></div>
-  <div class="wrapper">
-    <div class="wrapper-left">
-      <a href="index.html"><div class="allyicon"></div></a>
-    </div>
-    <div class="wrapper-right">
-      <div class="header">
-        <h1>
-          Hi! I'm
-          <a href="index.html">Ally Palanzi</a>.
-        </h1>
-        <h2>
-          I'm a
-          <a href="http://dribbble.com/allypalanzi" target="_blank">designer</a>
-          and
-          <a href="https://github.com/allypalanzi" target="_blank">front-end developer</a>
-          from Washington, DC. Currently a front-end developer for
-          <a href="http://voxmedia.com" target="_blank">Vox Media</a> and a co-host of the <a href="http://sassydc.github.io" target="_blank">DC Sass Meetup</a>.
-        </h2>
-      </div>
-      <%= yield %>
+    <%= partial 'partials/header' %>
+    <%= yield %>
+    <%= partial 'partials/footer' %>
     </div>
   </div>
 </body>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
-  <%= javascript_include_tag  "all" %>
   <%= partial 'partials/analytics' %>
-
 </html>
