--- a/source/stylesheets/styles.scss
+++ b/source/stylesheets/styles.scss
@@ -7,7 +7,7 @@ Hi, hello. Please don't judge my codez. I needs to re-factor :(
 */
 
 // #Reset
-// ================================================== 
+// ==================================================
 	html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video  {
 		margin: 0;
 		padding: 0;
@@ -112,9 +112,9 @@ Hi, hello. Please don't judge my codez. I needs to re-factor :(
     }
 ::-moz-selection  {
     background: #FFFF00; /* Firefox */
-}   
+}
 
-     .clear  {
+     .clear, .clearfix  {
         clear: both;
     }
 
@@ -204,7 +204,7 @@ to  {opacity: 0;}
         font-size: 30px
         }
 
- 
+
     }
 
     h2 {
@@ -249,7 +249,7 @@ to  {opacity: 0;}
         font-size: 16px;
         line-height: 24px;
         margin: 0px auto;
-        margin-bottom: 12px;    
+        margin-bottom: 12px;
     }
 
     a {
@@ -283,7 +283,7 @@ to  {opacity: 0;}
     }
 
 
-// #Nav 
+// #Nav
 // ==================================================
     .navcont {
         width: 100%;
@@ -293,7 +293,7 @@ to  {opacity: 0;}
 
 
 // #Body
-// ================================================== 
+// ==================================================
     .wrapper {
         width: 85%;
         max-width: 1000px;
@@ -454,7 +454,7 @@ textarea {
     width: 100%;
     height: 100%;
     vertical-align: top;
-    
+
     img {
         width: 100%;
     }
@@ -537,7 +537,7 @@ textarea {
     img,canvas {
         max-width: 100%;
 
-   
+
     }
      &.no-white {
         background: none;
@@ -593,7 +593,7 @@ em {
     p {
     font-size: 18px;}
 }
-    
+
 .role-title {
     vertical-align: top;
     margin-right: 5px;
@@ -623,7 +623,7 @@ em {
     -moz-transition: background .5s;
     color: #fff;
 
-    
+
     &:hover {
         background: $gray;
         color: #fff;
