--- a/source/layouts/project.erb
+++ b/source/layouts/project.erb
@@ -37,5 +37,6 @@
   </div>
 </body>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
+  <%= javascript_include_tag 'all' %>
   <%= partial 'partials/analytics' %>
 </html>
