add vox sentences

--- a/source/partials/_thumbs.html.erb
+++ b/source/partials/_thumbs.html.erb
@@ -7,6 +7,11 @@
     </a>
 </li>
 <li>
+    <a href="vox-sentences.html">
+        <img src="<%= image_path("vox-sentences-thumb.jpg") %>" alt="" class="thumbs"></a>
+    </a>
+</li>
+<li>
     <a href="megabus.html">
         <img src="<%= image_path("megabus-thumb.png") %>" alt="" class="thumbs"></a>
     </a>
