--- a/source/megabus.html.erb
+++ b/source/megabus.html.erb
@@ -2,7 +2,7 @@
 layout: project
 ---
 
-<a href="vox.html" class="arrows arrows-left">&lsaquo;</a>
+<a href="vox-sentences.html" class="arrows arrows-left">&lsaquo;</a>
 <a href="offbeat.html" class="arrows arrows-right">&rsaquo;</a>
 <div class="project section">
 <h1>Megabus Rebranding</h1>
