--- a/source/vox.html.erb
+++ b/source/vox.html.erb
@@ -2,7 +2,7 @@
 layout: project
 ---
 <a href="polygon.html" class="arrows arrows-left">&lsaquo;</a>
-<a href="megabus.html" class="arrows arrows-right">&rsaquo;</a>
+<a href="vox-sentences.html" class="arrows arrows-right">&rsaquo;</a>
 <div class="project section">
   <h1>Vox Media Website &amp; Media Kit</h1>
 <div class="project-image section">
