update some things

--- a/source/partials/_header.html.erb
+++ b/source/partials/_header.html.erb
@@ -15,6 +15,6 @@
         and
         <a href="https://github.com/allypalanzi" target="_blank">developer</a>
         from Washington, DC. Currently a front-end engineer for
-        <a href="http://voxmedia.com" target="_blank">Vox Media</a> and a co-host of the <a href="http://sassydc.github.io" target="_blank">DC Sass Meetup</a>.
+        <a href="http://voxmedia.com" target="_blank">Vox Media</a>, a co-host of the <a href="http://sassydc.github.io" target="_blank">DC Sass Meetup</a>, and a Visual Design instructor at <a href="https://generalassemb.ly/instructors/ally-palanzi/4262" target="_blank">General Assembly</a>.
       </h2>
     </div>
