--- a/source/resume.html.erb
+++ b/source/resume.html.erb
@@ -5,6 +5,13 @@ layout: project
 <div class="left resume-page">
   <section class="resume-experience">
     <h1>Experience</h1>
+      <div class="resume-description">
+      <h2>Visual Design Instructor, General Assembly</h2>
+      <h3>April 2015 — Current</h3>
+      <ul>
+        <li>Work with General Assembly coordinators and two other instructors to teach students an introduction to design, including design concepts, branding, layout, and responsive design</li>
+      </ul>
+    </div>
     <div class="resume-description">
     <h2>Front-end Engineer, Vox Media</h2>
     <h3>May 2014 — Current</h3>
@@ -13,6 +20,7 @@ layout: project
       <li>Front-end developer on Vox</li>
     </ul>
   </div>
+
   <div class="resume-description">
     <h2>Front-end Design Intern, Vox Media</h2>
     <h3>May 2012 — May 2014</h3>
@@ -59,7 +67,9 @@ layout: project
         <li>Sass/CSS</li>
         <li>HTML5</li>
         <li>JavaScript</li>
-        <li>Git</li>
+        <li>Git/Github</li>
+        <li>Middleman/Jekyll</li>
+        <li>Grunt</li>
     </ul>
     <ul class="right">
       <h3>Knowledge of</h3>
@@ -76,14 +86,14 @@ layout: project
     <h1>Involvement</h1>
     <div class="resume-description">
       <h2>DC Sass Meetup</h2>
-      <h3>2014 — current</h3>
+      <h3>2014 — Current</h3>
       <ul>
         <li>Plan events related to front-end technology for the DC community</li>
       </ul>
     </div>
     <div class="resume-description">
       <h2>Girl Develop It Instructor &amp; TA</h2>
-      <h3>2014 — current</h3>
+      <h3>2014 — Current</h3>
       <ul>
         <li>Instruct/TA various front-end related classes for women wanting to code</li>
       </ul>
