--- a/source/vox-sentences.html.erb
+++ b/source/vox-sentences.html.erb
@@ -18,7 +18,7 @@ layout: project
   </ul>
   <p>Vox Sentences is a daily newsletter sent out by the Vox editorial staff. The idea is quick exerpts of the daily news from various sources.</p>
   <h3>Creating a tool</h3>
-  <p>Email newsletters are hard. Well, in reality, the development restrictions are what is hard. Tables, inline CSS, Outlook -- there's so much that can go horribly, horribly wrong.</p>
+  <p>Email newsletters are hard. Well, in reality, the development restrictions are what make it hard. Tables, inline CSS, Outlook &mdash; there's so much that can go horribly, horribly wrong.</p>
   <p>In order to make this process as painless as possible, instead of just developing the design, putting it into a SailThru template, and passing it off to thew newsletter editor saying "Good luck! Hope you don't break the HTML!", I decided to take one step out of this for him: the code.</p>
   <p>I created a fairly basic generator that read from a google spreadsheet and outputted the newsletter template as HTML for the editor to copy paste into Sailthru and also another output to post it directly into an entry on Vox.</p>
   <p>In doing this, I found some other great tools that made developing emails better. I set it up to automatically turn my compiled Sass into inline CSS, for example.</p>
