--- a/source/resume.html.erb
+++ b/source/resume.html.erb
@@ -5,83 +5,106 @@ layout: project
 <div class="left resume-page">
   <section class="resume-experience">
     <h1>Experience</h1>
-      <div class="resume-description">
-      <h2>Visual Design Instructor, General Assembly</h2>
-      <h3>April 2015 — Current</h3>
+    <div class="resume-description">
+      <h2>Senior Front-End Engineer, Vox Media</h2>
+      <h3>November 2015 — Current</h3>
       <ul>
-        <li>Work with General Assembly coordinators and two other instructors to teach students an introduction to design, including design concepts, branding, layout, and responsive design</li>
+        <li>Work closely with designers, project managers, and full-stack engineers to implement new features across our platform, Chorus.</li>
+        <li>Work with other engineers to redefine the architecture and tooling for the front-end of our platform.</li>
+        <li>Contribute to our front-end work flow and guidelines across our team.</li>
+        <li>Mentor and help new teammates.</li>
+        <li>Lead a monthly front-end skill-share.</li>
+        <li>Work with other Product Team members and leadership on developing a culture for hosting <a href="http://product.voxmedia.com/events">events and contributing back to the community.</a></li>
       </ul>
     </div>
+
     <div class="resume-description">
-    <h2>Front-end Engineer, Vox Media</h2>
-    <h3>May 2014 — Current</h3>
-    <ul>
-      <li>Front-end developer on Polygon</li>
-      <li>Front-end developer on Vox</li>
-    </ul>
-  </div>
+      <h2>Front-End Engineer, Vox Media</h2>
+      <h3>May 2014 — November 2015</h3>
+      <ul>
+        <li>Post Vox.com launch, worked with a project manager, a designer, and a full-stack engineer to implement new features and bug fixes to support the site and editorial needs. Including launching <a href="http://www.poynter.org/2015/vox-works-with-mcclatchy-to-bring-explainers-to-local-readers/347415/">embeddable card stacks.</a></li>
+        <li>Worked with a project manager, a designer, and Editorial staff on developing interactive feature layouts for <a href="/polygon.html">Polygon</a>.</li>
+      </ul>
+    </div>
 
-  <div class="resume-description">
-    <h2>Front-end Design Intern, Vox Media</h2>
-    <h3>May 2012 — May 2014</h3>
-    <ul>
-      <li>Polygon features designer/developer</li>
-      <li>Front-end developer on VoxMedia.com</li>
-    </ul>
-  </div>
-      <div class="resume-description">
-    <h2>Front-end designer, u.krave design</h2>
-    <h3>June 2012 — Current</h3>
-    <ul>
-      <li>Co-founder</li>
-      <li>Freelance</li>
-    </ul>
-  </div>
-
-  <div class="resume-description">
-    <h2>TA for Intro to Web Design</h2>
-    <h3>August 2011 — December 2011</h3>
-    <ul>
-      <li>Aided professor with teaching basic website design and
- coding with HTML, CSS, and JavaScript</li>
-      <li> Helped students debug code and overcome various
- coding obstacles</li>
-    </ul>
-
-  </section>
-  <section class="resume-education">
-    <h1> Education</h1>
     <div class="resume-description">
-    <h2>Bachelor of Arts, Graphic Design</h2>
-    <h3>American University May 2014</h3>
-    <p>Minor in Computer Science</p>
+      <h2>Visual Design Instructor, General Assembly</h2>
+      <h3>April 2015 — May 2015</h3>
+      <ul>
+        <li>Worked with General Assembly coordinators and two other instructors to teach students an introduction to design. Including: design concepts, branding, layout, and responsive design.</li>
+      </ul>
+    </div>
 
+    <div class="resume-description">
+      <h2>Front-End Design Intern, Vox Media</h2>
+      <h3>May 2012 — May 2014</h3>
+      <ul>
+        <li>Worked as one of the founding designers of Polygon.</li>
+        <li>Worked with editorial staff and a designer on developing interactive feature layouts.</li>
+        <li>Front-end development for the corporate website.</li>
+      </ul>
+    </div>
+
+    <div class="resume-description">
+      <h2>Teaching Assistant, Web Design, American University</h2>
+      <h3>August 2011 — December 2011</h3>
+      <ul>
+        <li>Aided professor with teaching basic website design and coding with HTML, CSS, and JavaScript.</li>
+      </ul>
+    </div>
   </section>
+
   <section class="resume-skills">
     <h1>Skills</h1>
     <div class="resume-description">
-
-    <ul class="left">
-        <h3>Proficient in</h3>
-        <li>Adobe Creative Suite</li>
-        <li>Sass/CSS</li>
-        <li>HTML5</li>
-        <li>JavaScript</li>
-        <li>Git/Github</li>
-        <li>Middleman/Jekyll</li>
-        <li>Grunt</li>
-    </ul>
-    <ul class="right">
-      <h3>Knowledge of</h3>
-      <li>Python</li>
-      <li>Ruby on Rails</li>
-      <li>ERB Templating</li>
-    </ul>
+      <div class="left">
+        <h3>Proficient in:</h3>
+        <ul>
+          <li>Sass/CSS</li>
+          <li>HTML</li>
+          <li>JavaScript</li>
+          <li>Backbone JS</li>
+          <li>Static site generators: Middleman, Jekyll</li>
+          <li>JavaScript task runners: Grunt, Gulp</li>
+          <li>HTML Templating: ERB, Handlebars, Underscore</li>
+          <li>Git/Github</li>
+          <li>UX &amp; UI Design</li>
+          <li>Adobe Suite</li>
+        </ul>
+      </div>
+      <div class="right">
+        <h3>Knowledge of:</h3>
+        <ul>
+          <li>Python</li>
+          <li>Ruby / Ruby on Rails</li>
+          <li>Node</li>
+        </ul>
+      </div>
+      <div class="clearfix"></div>
+    </div>
   </section>
 </div>
 
 
+
+
 <div class="right resume-page">
+  <section class="resume-acknowledgements">
+    <h1>Awards</h1>
+    <div class="resume-description">
+      <h2>DCFemTech Powerful Woman Programmers</h2>
+      <h3>2015 Recipient</h3>
+    </div>
+
+    <div class="resume-description">
+      <h2>Comedy Hack Day DC Winner</h2>
+      <h3>December 2015</h3>
+      <ul>
+        <li>Worked with a team to develop and prototype a satirical app called IndieHobo. <a href="http://www.comedyhackday.org/dc-2015/" target="_blank">View more here.</a></li>
+      </ul>
+    </div>
+  </section>
+
   <section class="resume-involvement">
     <h1>Involvement</h1>
     <div class="resume-description">
@@ -93,59 +116,43 @@ layout: project
     </div>
     <div class="resume-description">
       <h2>Girl Develop It Instructor &amp; TA</h2>
-      <h3>2014 — Current</h3>
+      <h3>2014 — 2015</h3>
       <ul>
         <li>Instruct/TA various front-end related classes for women wanting to code</li>
       </ul>
-  </div>
+    </div>
     <div class="resume-description">
-      <h2>Yale Hack</h2>
-      <h3>2013</h3>
+      <h2>AU Design Club</h2>
+      <h3>2011 — 2014</h3>
       <ul>
-        <li>Hackathon at Yale University</li>
-        <li>Created a Chrome extension with other American U students</li>
+        <li>Vice President 2013 — 2014</li>
+        <li>Plan annual design show</li>
       </ul>
-  </div>
+    </div>
 
     <div class="resume-description">
-    <h2>World Bank Domestic Violence Hackathon</h2>
-    <h3>2013</h3>
-    <ul>
-      <li>Designed/developed a web application for
- Coaching Boys Into Men</li>
-    </ul>
-  </div>
+      <h2>AU ACM </h2>
+      <h3>2011 — 2014</h3>
+      <ul>
+        <li>Association of Computing Machinery</li>
+        <li>PR Chair 2012 — 2013</li>
+        <li>Improve student involvement in CS</li>
+        <li>Plan speakers and events</li>
+      </ul>
+    </div>
 
-
-      <div class="resume-description">
-    <h2>AU Design Club</h2>
-    <h3>2011 — 2014</h3>
-    <ul>
-      <li>Vice President 2013 — 2014</li>
-      <li>Plan annual design show</li>
-    </ul>
-  </div>
-
-        <div class="resume-description">
-    <h2>AU ACM </h2>
-    <h3>2011 — 2014</h3>
-    <ul>
-<li>Association of Computing Machinery</li>
-<li>PR Chair 2012 — 2013</li>
-<li>Improve student involvement in CS</li>
-<li>Plan speakers and events</li>
-    </ul>
-  </div>
-
-
-        <div class="resume-description">
-    <h2>AIGA Washington, DC</h2>
-    <h3>2012 — Present</h3>
-
-  </div>
-
+    <div class="resume-description">
+      <h2>AIGA Washington, DC</h2>
+      <h3>Member, 2012 — 2014</h3>
+    </div>
   </section>
 
-
+  <section class="resume-education">
+    <h1> Education</h1>
+    <div class="resume-description">
+      <h2>Bachelor of Arts, Graphic Design &amp; Minor in Computer Science</h2>
+      <h3>American University, 2010 – 2014</h3>
+    </div>
+  </section>
 </div>
 <div class="clearfix"></div>
