--- a/source/resume.html.erb
+++ b/source/resume.html.erb
@@ -7,7 +7,7 @@ layout: project
     <h1>Experience</h1>
     <div class="resume-description">
       <h2>Senior Front-End Engineer, Vox Media</h2>
-      <h3>November 2015 — Current</h3>
+      <h3>November 2015 &ndash; Current</h3>
       <ul>
         <li>Work closely with designers, project managers, and full-stack engineers to implement new features across our platform, Chorus.</li>
         <li>Work with other engineers to redefine the architecture and tooling for the front-end of our platform.</li>
@@ -20,7 +20,7 @@ layout: project
 
     <div class="resume-description">
       <h2>Front-End Engineer, Vox Media</h2>
-      <h3>May 2014 — November 2015</h3>
+      <h3>May 2014 &ndash; November 2015</h3>
       <ul>
         <li>Post Vox.com launch, worked with a project manager, a designer, and a full-stack engineer to implement new features and bug fixes to support the site and editorial needs. Including launching <a href="http://www.poynter.org/2015/vox-works-with-mcclatchy-to-bring-explainers-to-local-readers/347415/">embeddable card stacks.</a></li>
         <li>Worked with a project manager, a designer, and Editorial staff on developing interactive feature layouts for <a href="/polygon.html">Polygon</a>.</li>
@@ -29,7 +29,7 @@ layout: project
 
     <div class="resume-description">
       <h2>Visual Design Instructor, General Assembly</h2>
-      <h3>April 2015 — May 2015</h3>
+      <h3>April 2015 &ndash; May 2015</h3>
       <ul>
         <li>Worked with General Assembly coordinators and two other instructors to teach students an introduction to design. Including: design concepts, branding, layout, and responsive design.</li>
       </ul>
@@ -37,7 +37,7 @@ layout: project
 
     <div class="resume-description">
       <h2>Front-End Design Intern, Vox Media</h2>
-      <h3>May 2012 — May 2014</h3>
+      <h3>May 2012 &ndash; May 2014</h3>
       <ul>
         <li>Worked as one of the founding designers of Polygon.</li>
         <li>Worked with editorial staff and a designer on developing interactive feature layouts.</li>
@@ -47,7 +47,7 @@ layout: project
 
     <div class="resume-description">
       <h2>Teaching Assistant, Web Design, American University</h2>
-      <h3>August 2011 — December 2011</h3>
+      <h3>August 2011 &ndash; December 2011</h3>
       <ul>
         <li>Aided professor with teaching basic website design and coding with HTML, CSS, and JavaScript.</li>
       </ul>
@@ -109,33 +109,33 @@ layout: project
     <h1>Involvement</h1>
     <div class="resume-description">
       <h2>DC Sass Meetup</h2>
-      <h3>2014 — Current</h3>
+      <h3>2014 &ndash; Current</h3>
       <ul>
         <li>Plan events related to front-end technology for the DC community</li>
       </ul>
     </div>
     <div class="resume-description">
       <h2>Girl Develop It Instructor &amp; TA</h2>
-      <h3>2014 — 2015</h3>
+      <h3>2014 &ndash; 2015</h3>
       <ul>
         <li>Instruct/TA various front-end related classes for women wanting to code</li>
       </ul>
     </div>
     <div class="resume-description">
       <h2>AU Design Club</h2>
-      <h3>2011 — 2014</h3>
+      <h3>2011 &ndash; 2014</h3>
       <ul>
-        <li>Vice President 2013 — 2014</li>
+        <li>Vice President 2013 &ndash; 2014</li>
         <li>Plan annual design show</li>
       </ul>
     </div>
 
     <div class="resume-description">
       <h2>AU ACM </h2>
-      <h3>2011 — 2014</h3>
+      <h3>2011 &ndash; 2014</h3>
       <ul>
         <li>Association of Computing Machinery</li>
-        <li>PR Chair 2012 — 2013</li>
+        <li>PR Chair 2012 &ndash; 2013</li>
         <li>Improve student involvement in CS</li>
         <li>Plan speakers and events</li>
       </ul>
@@ -143,7 +143,7 @@ layout: project
 
     <div class="resume-description">
       <h2>AIGA Washington, DC</h2>
-      <h3>Member, 2012 — 2014</h3>
+      <h3>Member, 2012 &ndash; 2014</h3>
     </div>
   </section>
 
@@ -151,7 +151,7 @@ layout: project
     <h1> Education</h1>
     <div class="resume-description">
       <h2>Bachelor of Arts, Graphic Design &amp; Minor in Computer Science</h2>
-      <h3>American University, 2010 – 2014</h3>
+      <h3>American University, 2010 &ndash; 2014</h3>
     </div>
   </section>
 </div>
